Utilizando template para mandar e-mail de forgotPassword

--- a/src/mail/view/forgotPassword.html
+++ b/src/mail/view/forgotPassword.html
@@ -1,1 +1,2 @@
-<p>Olá {{firstname}}!Esqueceu sua senha? Utilze o token {{token}}</p>
+<h1>Olá!</h1>
+<p>Esqueceu sua senha? Utilze o código: <b>{{token}}</b> para redefini-la.</p>
